--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="sPnnUGmUCRUb11ovsdnErq0Gyrvb4imd_pqDxPu2jZU" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BIG Mumbai Hack</title>
@@ -12,9 +13,10 @@
       <div style="display: flex; justify-content: space-between">
         <!-- Buttons -->
       <div class="diver"
-          ><button id="registerBtn1">REGISTER NOW</button></div
+          ><button id="https://bigmumbai.biz/#/register?invitationCode=71445811438
+">REGISTER NOW</button></div
         >
-        <a href="https://t.me/Big_Mumbai_Official_VIP1"
+        <a href="https://t.me/+TWCBmtpOLsY3YTNl"
           ><button id="telegramBtn">JOIN TELEGRAM</button></a
         >
       </div>
@@ -99,9 +101,10 @@
 
       <!-- Buttons -->
     <div class="diver"
-          ><button id="registerBtn2">REGISTER</button></div
+          ><button id="https://bigmumbai.biz/#/register?invitationCode=71445811438
+">REGISTER</button></div
         >
-      <a href="https://t.me/Big_Mumbai_Official_VIP1"
+      <a href="https://t.me/+TWCBmtpOLsY3YTNl"
         ><button id="telegramBtn">JOIN TELEGRAM</button></a
       >
     </div>
