--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div style="display: flex; justify-content: space-between">
         <!-- Buttons -->
       <div class="diver"
+        <a href="https://bigmumbai.biz/#/register?invitationCode=71445811438"
           ><button id="https://bigmumbai.biz/#/register?invitationCode=71445811438
 ">REGISTER NOW</button></div
         >
@@ -101,6 +102,7 @@
 
       <!-- Buttons -->
     <div class="diver"
+       <a href="https://bigmumbai.biz/#/register?invitationCode=71445811438"
           ><button id="https://bigmumbai.biz/#/register?invitationCode=71445811438
 ">REGISTER</button></div
         >
